--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,6 @@ justify-content: space-between;
 {
     text-decoration: none;
     color: #1E1B1B;
-    /**padding: 20px 50px 0 33px;**/
-    /**padding-right: 5px;**/
     font-size: 16px;
     font-weight: 600;
     line-height: 28px;
@@ -111,7 +109,6 @@ font-weight: 800;
 .telephone-assistant
 {
     color: #1E1B1B;
-    
     text-transform: capitalize;
 font-family: Manrope;
 font-size: 16px;
@@ -161,7 +158,7 @@ flex-direction: row;
     width: 530px;
     height: 450px;
   
-    background-image: url(/images/Image.png);
+    background-image: url('../images/Image.png');
     background-position: center;
     background-size: cover;
 }
